--- a/discussion.html
+++ b/discussion.html
@@ -13,9 +13,9 @@
 class: center, middle, inverse, title-slide
 
 # Forecaster Performance Characteristics
-## Discussion
+## A Discussion
 ### Itamar Caspi
-### July 9, 2019 (updated: 2019-07-08)
+### Bank of Israel, July 9, 2019
 
 ---
 
@@ -87,7 +87,7 @@ name: lit
 
 ---
 
-# From Psychology
+# From psychology
 
 .pull-left[
 &lt;img src="figs/tetlock.png" width="65%" style="display: block; margin: auto;" /&gt;
@@ -150,7 +150,7 @@ name: causality
 
 ---
 
-# Curse of dimensionality
+# The curse of dimensionality
 
 Presumably, the list of covariates is not sizable:
 - experience
@@ -181,7 +181,7 @@ In this case, estimating the effect of having a PhD on forecasting performance i
 
 ]
 .pull-right[
-&lt;img src="figs/dag_phd_0.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/dag_phd_0.png" width="120%" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -200,7 +200,7 @@ In this example, the bias is probably _negative._ It seems reasonable to think t
 
 ]
 .pull-right[
-&lt;img src="figs/dag_phd_1.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/dag_phd_1.png" width="120%" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -216,7 +216,7 @@ __OPTION 2:__ Look for other exogenous variation in the data and see how its eff
 
 - e.g., Coibion and Gorodnichenko (JPE 2012).
 
-__OPTION 3:__ Stay in the realm of descriptive analysis, but change the subject, e.g., 
+__OPTION 3:__ Stay in the realm of descriptive studies, but refine the research question, e.g., 
 
 - Is there evidence of superforecasters? If so, what are their characteristics?
 
@@ -236,13 +236,17 @@ Does switching jobs change outcomes? The case of football managers:
 
 ---
 
+# Is he that "special"?
+
 .pull-left[
-&lt;img src="figs/football_dist.jpg" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/football_flow1.jpg" width="80%" style="display: block; margin: auto;" /&gt;
+
 
 _Source_: [The Economist.](https://www.economist.com/graphic-detail/2019/01/19/managers-in-football-matter-much-less-than-most-fans-think)
 ]
+
 .pull-right[
-&lt;img src="figs/football_flow.jpg" width="70%" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/football_flow2.jpg" width="90%" style="display: block; margin: auto;" /&gt;
 ]
 
 
