--- a/discussion.html
+++ b/discussion.html
@@ -13,7 +13,7 @@
 class: center, middle, inverse, title-slide
 
 # Forecaster Performance Characteristics
-## A Discussion
+## Discussion
 ### Itamar Caspi
 ### Bank of Israel, July 9, 2019
 
@@ -22,38 +22,50 @@ class: center, middle, inverse, title-slide
 
 
 
-# What this research is about
+# What this paper does
 
 
-- The authors assemble an impressive and unique dataset:
+- Constructs an impressive an original dataset:
 
-  - Inflation and interest rate forecasts made by __480__ experts from __440__ institutions, bofore and after the global finance crisis.
+  - Inflation and interest rate forecasts made by __480__ experts from __440__ institutions, before and after the global finance crisis.
   
-  - A rich set of forecasters charateristics: experience (type and time), gender, education (level, type, and quality), and affiliation (type and place).
+  - A rich set of forecasters characteristics: experience (type and time), gender, education (level, type, and quality), and affiliation (type and place).
   
-- Characterize the factors associated with forecaster survival rate, as well as three measures of performance (accuracy, courage, and instability)
+- Composes a measure of survival rate as well as three measures of forecasting performance - accuracy, courage, and instability.
+
+- Characterizes the factors associated with forecaster survival rate and performance.
+
+
+---
+
+# What the paper finds
+
+The following characteristics __improve__ forecasting performance, courage, and instability:
+
+1. Level and quality of the education.
+
+2. Localization and type of their affiliation.
+
+3. Experience, as a forecaster in a central bank or academia.
 
 
 ---
 
 # Econometric approach
 
-The authors use a two-way fixed effect panel data model to estimate the effects of various forecaster charateristics on forecasting performance:
+In their main analysis, the authors use a two-way fixed effect panel data model to estimate the effects of various forecaster characteristics on forecasting performance:
 
 `$$y_{it}=x_{it}^{\prime} \beta+\alpha_{i}+\theta_{t}+\varepsilon_{it}$$`
-where `\(y_{it}\)` is a measuere of forecasting performence (accuracy, courage, and instability), and `\(x_i\)` is a vector of forecaster charateristics.
+where `\(y_{it}\)` is a measure of forecasting performance (accuracy, courage, and instability), and `\(x_i\)` is a vector of forecaster characteristics.
 
-__RESEARCH QUESTION:__ Which factors __affect__ forecasting performance (and survival rate)? 
+&gt; __RESEARCH QUESTION:__ Which forecasters characteristics __affect__ forecasting performance (and survival rate)? 
 
-__FINDINGS:__
-
-&gt;  _"We show that the level and quality of the education, the localization and type of their affiliation, and their experience, as a forecaster or in a central bank or academia, are critical characteristics for __improving__ these behaviors."_
 
 
 
 ---
 
-# Main Comments
+# My Comments
 
 1. [Literature](#lit)
 
@@ -67,7 +79,7 @@ __FINDINGS:__
 class: title-slide-section-blue, center, middle
 name: lit
 
-# Literature
+# Comment #1: Literature
 
 
 ---
@@ -108,7 +120,7 @@ According to Tetlock &amp; Gardner, superforecasters typically have:
 class: title-slide-section-blue, center, middle
 name: sig
 
-# Economic Significance
+# Comment #2: Economic Significance
 
 
 ---
@@ -145,7 +157,7 @@ Note that
 class: title-slide-section-blue, center, middle
 name: causality
 
-# Causality and policy implications
+# Comment #3: Causality and policy implications
 
 
 ---
@@ -233,10 +245,9 @@ Does switching jobs change outcomes? The case of football managers:
 &lt;img src="figs/football_title.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 
-
 ---
 
-# Is he that "special"?
+# How special is "the special one"?
 
 .pull-left[
 &lt;img src="figs/football_flow1.jpg" width="80%" style="display: block; margin: auto;" /&gt;
@@ -256,7 +267,7 @@ _Source_: [The Economist.](https://www.economist.com/graphic-detail/2019/01/19/m
 
 - Descriptive statistics: Average years of experience? How many have PhD? How many economists? How many women? Etc.
 
-- Model: Why is it essential (it is)?
+- Survival analysis: Is it relevant?
 
 - Non-linearity in __`experience`__?
 
@@ -264,10 +275,16 @@ _Source_: [The Economist.](https://www.economist.com/graphic-detail/2019/01/19/m
 
 - Missing data and imputations.
 
-- Consider changing the title.
 
+---
 
+# Summary of comments and suggestions
 
+- Great database!
+
+- Interesting findings
+
+- Refine causal analysis
 
 ---
 class: .title-slide-final, center, inverse, middle
