--- a/discussion.html
+++ b/discussion.html
@@ -49,19 +49,6 @@ The following characteristics __improve__ forecasting performance, courage, and 
 3. Experience, as a forecaster in a central bank or academia.
 
 
----
-
-# Econometric approach
-
-In their main analysis, the authors use a two-way fixed effect panel data model to estimate the effects of various forecaster characteristics on forecasting performance:
-
-`$$y_{it}=x_{it}^{\prime} \beta+\alpha_{i}+\theta_{t}+\varepsilon_{it}$$`
-where `\(y_{it}\)` is a measure of forecasting performance (accuracy, courage, and instability), and `\(x_i\)` is a vector of forecaster characteristics.
-
-&gt; __RESEARCH QUESTION:__ Which forecasters characteristics __affect__ forecasting performance (and survival rate)? 
-
-
-
 
 ---
 
@@ -157,7 +144,21 @@ Note that
 class: title-slide-section-blue, center, middle
 name: causality
 
-# Comment #3: Causality and policy implications
+# Comment #3: Causality and Policy Implications
+
+
+---
+
+# Econometric approach
+
+In their main analysis, the authors use a two-way fixed effect panel data model to estimate the effects of various forecaster characteristics on forecasting performance:
+
+`$$y_{it}=x_{it}^{\prime} \beta+\alpha_{i}+\theta_{t}+\varepsilon_{it}$$`
+
+where `\(y_{it}\)` is a measure of forecasting performance (accuracy, courage, and instability), and `\(x_i\)` is a vector of forecaster characteristics.
+
+&gt; __RESEARCH QUESTION:__ Which forecasters characteristics __affect__ forecasting performance (and survival rate)? 
+
 
 
 ---
@@ -291,7 +292,7 @@ class: .title-slide-final, center, inverse, middle
 
 # `slides %&gt;% end()`
 
-[&lt;i class="fa fa-github"&gt;&lt;/i&gt; Source code](https://github.com/ml4econ/notes-spring2019/tree/master/01-overview)  
+[&lt;i class="fa fa-github"&gt;&lt;/i&gt; Source code](https://github.com/itamarcaspi/forecaster-performance-discussion)  
 
 ---
 
