--- a/discussion.html
+++ b/discussion.html
@@ -157,8 +157,7 @@ In their main analysis, the authors use a two-way fixed effect panel data model 
 
 where `\(y_{it}\)` is a measure of forecasting performance (accuracy, courage, and instability), and `\(x_i\)` is a vector of forecaster characteristics.
 
-&gt; __RESEARCH QUESTION:__ Which forecasters characteristics __affect__ forecasting performance (and survival rate)? 
-
+&gt; __RESEARCH QUESTION:__ Which forecasters characteristics __affect__ forecasting performance? 
 
 
 ---
