--- a/discussion.html
+++ b/discussion.html
@@ -40,7 +40,7 @@ class: center, middle, inverse, title-slide
 
 # What the paper finds
 
-The following characteristics __improve__ forecasting performance, courage, and instability:
+The following characteristics __improve__ forecasting _performance, courage_, and _instability_:
 
 1. Level and quality of the education.
 
