--- a/discussion.html
+++ b/discussion.html
@@ -280,11 +280,17 @@ _Source_: [The Economist.](https://www.economist.com/graphic-detail/2019/01/19/m
 
 # Summary of comments and suggestions
 
-- Great database!
+The paper
+
+- Impressive data collection!
 
 - An essential contribution to the literature
 
 - Interesting findings
+
+Comments:
+
+- Broaden the scope of the literature
 
 - Refine causal analysis OR descriptive analysis
 
