--- a/discussion.html
+++ b/discussion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>Forecaster Performance Characteristics</title>
+    <title>Forecasts and Forecaster Characteristics</title>
     <meta charset="utf-8" />
     <meta name="author" content="Itamar Caspi" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Forecaster Performance Characteristics
+# Forecasts and Forecaster Characteristics
 ## Discussion
 ### Itamar Caspi
 ### Bank of Israel, July 9, 2019
@@ -278,7 +278,7 @@ _Source_: [The Economist.](https://www.economist.com/graphic-detail/2019/01/19/m
 
 ---
 
-# Summary of comments and suggestions
+# Summary
 
 The paper
 
