--- a/discussion.html
+++ b/discussion.html
@@ -269,6 +269,8 @@ _Source_: [The Economist.](https://www.economist.com/graphic-detail/2019/01/19/m
 
 - Survival analysis: Is it relevant?
 
+- Model: Does it help the reader?
+
 - Non-linearity in __`experience`__?
 
 - Add figures!
